--- a/ChinookMusic/WebApp/appsettings.json
+++ b/ChinookMusic/WebApp/appsettings.json
@@ -1,6 +1,11 @@
 {
+  //the connection string json element was created when the webApp was created with the security level of individual accounts
+  //the code to handle the security will be using a dDB
+  //connection name of DefaultConnection
+  //THEREFORE you will not remove this connection string
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebApp-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebApp-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ChinookDB": "Server=.;Database=Chinook;Trusted_Connection=true;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
