--- a/ChinookMusic/WebApp/appsettings.json
+++ b/ChinookMusic/WebApp/appsettings.json
@@ -3,10 +3,13 @@
   //the code to handle the security will be using a dDB
   //connection name of DefaultConnection
   //THEREFORE you will not remove this connection string
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebApp-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ChinookDB": "Server=.;Database=Chinook;Trusted_Connection=true;MultipleActiveResultSets=true"
-  },
+  //"ConnectionStrings": {
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebApp-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true",
+    //"ChinookDB": "Server=.;Database=Chinook;Trusted_Connection=true;MultipleActiveResultSets=true"
+    //this is where user secret comes, it helps us to avoid merge conflict. the way it works is that it creates a physical file on our local machine. It is not going to be saved in the team's repository. 
+    //Each team member will have his/her user secret on their machine and will have his/her own connection string. The person to set it up will set up their own user secret. When you pull it down, the first thing to do is to set ur own user secret.
+    //However, if you are working on different machines, you will have to do user secrets on each machine. first go to web app, right click
+ // },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
